--- a/app/views/devise/two_factor_authentication_setup/index.html.slim
+++ b/app/views/devise/two_factor_authentication_setup/index.html.slim
@@ -9,9 +9,7 @@
         = f.error_notification
         p = t('devise.two_factor_authentication.otp_setup')
         .mb2
-          = second_factor_checkboxes_for(f, '2fa_setup')
-        .toggle-mobile
-          .mobile-num
-            p = t('devise.two_factor_authentication.otp_sms_disclaimer')
-            = f.input :mobile, required: false, label: 'Mobile Number'
+        .mobile-num
+          p = t('devise.two_factor_authentication.otp_sms_disclaimer')
+          = f.input :mobile, required: true, label: 'Mobile Number'
         = f.button :submit, 'Submit'
