--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -6,9 +6,14 @@
       .panel-heading
         h2.m0 = t('upaya.headings.registrations.new')
 
-      = simple_form_for(resource, as: :user, html: { autocomplete: 'off', role: 'form' }, url: user_registration_path) do |f|
+      = simple_form_for(@register_user_email_form,
+          html: { autocomplete: 'off', role: 'form' },
+          url: user_registration_path) do |f|
         = f.error_notification
-        = f.input :email, required: true, autofocus: true, input_html: { 'aria-describedby' => 'email_description' }
+        = f.input :email,
+                  required: true,
+                  autofocus: true,
+                  input_html: { 'aria-describedby' => 'email_description' }
         = f.button :submit, 'Sign up'
         div
           = t('upaya.forms.registration.already_have_account_html')
