--- a/app/views/devise/registrations/_form.html.slim
+++ b/app/views/devise/registrations/_form.html.slim
@@ -1,7 +1,8 @@
 .mb3
   h4 = t('upaya.forms.registration.contact_info')
-  = f.input :email, required: true, autofocus: true, input_html: { 'data-tooltip' => true, :title => t('upaya.forms.registration.email_field') }
-  = f.input :mobile, required: false, input_html: { 'data-tooltip' => true, :title => t('upaya.forms.registration.mobile_field') }
+  = f.input :email, required: true, autofocus: true, input_html: { 'data-tooltip' => true, title: t('upaya.forms.registration.email_field') }
+  = f.input :mobile, required: false, input_html: { 'data-tooltip' => true, title: t('upaya.forms.registration.mobile_field'), type: :tel }
+
 .mb3
   h4 Password
   = f.input :password, required: false
