--- a/app/views/devise/two_factor_authentication_setup/confirm.html.slim
+++ b/app/views/devise/two_factor_authentication_setup/confirm.html.slim
@@ -2,5 +2,5 @@
 
 h2 = t('devise.two_factor_authentication.enter_auth_code')
 = form_tag([resource_name, :two_factor_authentication], method: :put, role: 'form') do
-  = text_field_tag :code
+  = number_field_tag :code, input_html: { autofocus: true, type: :number }
   = submit_tag 'Submit', class: 'usa-button'
